--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap');
 * {
   margin: 0;
   padding: 0;
+}
+
+* {
+  font-family: 'Josefin Sans', sans-serif;
 }
