--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -9,4 +10,8 @@
 
 * {
   font-family: 'Josefin Sans', sans-serif;
+}
+
+h1 {
+  color: #FE7833;
 }
